--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -10,8 +10,10 @@
       <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
     </div>
     <div class="collapse navbar-collapse" id="navigation">
-      <ul class="navbar-nav nav">  
-        <li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+      <ul class="navbar-nav nav">
+        {{#if currentUser}}
+          <li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+        {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{>loginButtons}}
