--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-inverse" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
+      <a class="navbar-brand" href="{{pathFor 'postsList'}}"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Microscope</a>
     </div>
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="navbar-nav nav">
